<resources>
    <string name="app_name">当当钱包</string>
    <string name="hot">热门</string>
    <string name="lending">货款</string>
    <string name="all_lending">货款大全</string>
    <string name="personal">我的</string>
    <string name="shengqing">人已申请</string>
    <string name="shengqingSuccess">人申请成功</string>
    <string name="credit_card">信用卡</string>
    <string name="credit_card_data">申请简单,立即下卡</string>
    <string name="success_rate">成功率</string>
    <string name="back">返回</string>
    <string name="comments">评论</string>
    <string name="please_login">Hi,先登录吧!</string>
    <string name="start_login">立即登录</string>
    <string name="start_register">立即注册</string>
    <string name="please_input_username">请输入帐号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="comfirm">确定</string>
    <string name="test1">花金宝:芝麻分600以上稳稳下款</string>
    <string name="test2">简单借款:无门槛、不上征信、快至56秒到账</string>
    <string name="test3">小牛闪货:一张身份证秒借5000</string>
</resources>
