<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/dialog_main_linear"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/login_background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/dialog_imageview_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.5dp"
            android:layout_marginBottom="11.5dp"
            android:textSize="12sp"
            android:textColor="@color/black_1"
            android:gravity="center"
            android:text="@string/please_login"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="12dp"
        android:background="@drawable/horizontal_shadow"/>
    <EditText
        android:id="@+id/dialog_edit_username"
        android:layout_width="270.5dp"
        android:layout_height="40.5dp"
        android:paddingLeft="10.5dp"
        android:singleLine="true"
        android:textColor="@color/black_1"
        android:textColorHint="@color/black_2"
        android:layout_gravity="center_horizontal"
        android:textSize="10sp"
        android:background="@drawable/editext_login_selector"
        android:hint="@string/please_input_username"/>
    <EditText
        android:id="@+id/dialog_edit_password"
        android:layout_marginTop="10.5dp"
        android:layout_width="270.5dp"
        android:layout_height="40.5dp"
        android:paddingLeft="10.5dp"
        android:singleLine="true"
         android:textSize="10sp"
        android:inputType="textPassword"
        android:textColor="@color/black_1"
        android:textColorHint="@color/black_2"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/editext_login_selector"
        android:hint="@string/please_input_password"/>
    <Button
        android:id="@+id/dialong_button_login"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="12sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/start_login"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/dialong_textview_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/black_3"
        android:textSize="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/start_register"/>
</LinearLayout>