<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

        <include
            android:id="@+id/all_lending_titleBar"
            layout="@layout/include_titlebar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:background="@color/white"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/all_lending_notify_horn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="10dp"
                android:maxWidth="10dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/horn"/>

            <ViewFlipper
                android:id="@+id/all_lending_viewfilpper"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inAnimation="@anim/actionsheet_in"
                android:outAnimation="@anim/actionsheet_out"
                android:autoStart="true"
                android:flipInterval="3000">
                <TextView
                    android:id="@+id/all_lending_viewfilpper_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/gray_3"
                    android:text="@string/test1"
                    />
                <TextView
                    android:id="@+id/all_lending_viewfilpper_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/gray_3"
                    android:text="@string/test2"
                    />
                <TextView
                    android:id="@+id/all_lending_viewfilpper_text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/gray_3"
                    android:text="@string/test3"
                    />
            </ViewFlipper>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_4"/>
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/all_lending_swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/all_lending_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>
        </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>