<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.view.ViewPager
                android:id="@+id/maint_viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/main_bottom_view"/>
            <View
                android:id="@+id/main_bottom_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_above="@+id/main_bottom_layout"
                android:background="@color/gray_4"/>
            <LinearLayout
                android:id="@+id/main_bottom_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/white"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/main_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/lineal_mainfunction_selector"
                    android:padding="6dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/main_home_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/imageview_mainhome_selector"/>
                    <TextView
                        android:id="@+id/main_home_text"
                        android:paddingTop="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black_2"
                        android:gravity="center"
                        android:text="@string/hot"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/main_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/lineal_mainfunction_selector"
                    android:gravity="center"
                    android:padding="6dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/main_center_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/imageview_maincenter_selector"/>
                    <TextView
                        android:id="@+id/main_center_text"
                        android:paddingTop="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black_2"
                        android:gravity="center"
                        android:text="@string/all_lending"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/main_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/lineal_mainfunction_selector"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="6dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/main_right_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/imageview_mainright_selector"/>
                    <TextView
                        android:id="@+id/main_right_text"
                        android:paddingTop="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/black_2"
                        android:text="@string/personal"/>
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
</FrameLayout>
