<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/hot_swipeRefresh"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

<android.support.v4.widget.NestedScrollView
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <include
                android:id="@+id/hot_titleBar"
                layout="@layout/include_titlebar"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="140dp">

                <com.lzy.widget.loop.LoopViewPager
                    android:id="@+id/hot_pagerHeader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:lvp_isAutoLoop="true"/>

                <com.lzy.widget.tab.CircleIndicator
                    android:id="@+id/hot_circleIndicator"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    app:ci_normalRadiusColor="@color/white"
                    app:ci_selectedRadiusColor="@color/red"
                    />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:background="@color/white"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/notify_horn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="10dp"
                    android:maxWidth="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/horn"/>
                <ViewFlipper
                    android:id="@+id/hot_viewfilpper"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoStart="true"
                    android:inAnimation="@anim/actionsheet_in"
                    android:outAnimation="@anim/actionsheet_out"
                    android:flipInterval="4000">
                    <TextView
                        android:id="@+id/hot_viewfilpper_text1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/gray_3"
                        android:text="@string/test1"
                        />
                    <TextView
                        android:id="@+id/hot_viewfilpper_text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/gray_3"
                        android:text="@string/test2"
                        />
                    <TextView
                        android:id="@+id/hot_viewfilpper_text3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/gray_3"
                        android:text="@string/test3"
                        />
                </ViewFlipper>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="horizontal">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/hot_funcion_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                </android.support.v7.widget.RecyclerView>
                <LinearLayout
                    android:id="@+id/hot_fuuction_rl1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/hotfunction_img1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:maxHeight="50dp"
                        android:maxWidth="50dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        />
                    <TextView
                        android:id="@+id/hotfunction_title1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        android:singleLine="true"
                        android:ellipsize="marquee"
                        android:textColor="@color/black_1"/>
                    <TextView
                        android:id="@+id/hotfunction_content1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="10dp"
                        android:textSize="9sp"
                        android:maxLines="2"
                        android:ems="10"
                        android:gravity="center_horizontal"
                        android:ellipsize="marquee"
                        android:textColor="@color/black_2"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/hot_fuuction_rl2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/hotfunction_img2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:maxHeight="50dp"
                        android:maxWidth="50dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        />
                    <TextView
                        android:id="@+id/hotfunction_title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        android:singleLine="true"
                        android:ellipsize="marquee"
                        android:textColor="@color/black_1"/>
                    <TextView
                        android:id="@+id/hotfunction_content2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="10dp"
                        android:textSize="9sp"
                        android:maxLines="2"
                        android:gravity="center_horizontal"
                        android:ems="10"
                        android:ellipsize="marquee"
                        android:textColor="@color/black_2"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/hot_fuuction_rl3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/hotfunction_img3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:maxHeight="50dp"
                        android:maxWidth="50dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/test_img1"/>
                    <TextView
                        android:id="@+id/hotfunction_title3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/credit_card"
                        android:textSize="12sp"
                        android:singleLine="true"
                        android:ellipsize="marquee"
                        android:textColor="@color/black_1"/>
                    <TextView
                        android:id="@+id/hotfunction_content3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="10dp"
                        android:textSize="9sp"
                        android:maxLines="2"
                        android:ems="10"
                        android:gravity="center_horizontal"
                        android:ellipsize="marquee"
                        android:textColor="@color/black_2"
                        android:text="@string/credit_card_data"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_marginTop="10dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/hot_content_rectcler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </android.support.v7.widget.RecyclerView>

            </LinearLayout>
        </LinearLayout>
</android.support.v4.widget.NestedScrollView>
</android.support.v4.widget.SwipeRefreshLayout>